--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Popup Test</title>
+  <title>Popup</title>
   <script>
     window.onload = function() {
       alert("FUCK YOU");
