--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Popup</title>
-  <script>
-    window.onload = function() {
-      alert("FUCK YOU");
-    };
-  </script>
-  <style>
-    body {
-      background-color: black;
-      color: red;
-      font-family: monospace;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    h1 {
-      font-size: 3rem;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ANI-CULT | Demon Slayer Merch</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body>
-  <h1>👊 DEMON MODE</h1>
+<body class="bg-home">
+  <header>
+    <h1>ANI-CULT</h1>
+    <p>Demon Slayer Infinity Castle Merch</p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="order.html">Order</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <section class="hero">
+      <h2>Most walk in as fans... You walk in as a demon.</h2>
+      <a href="order.html" class="button">Order Now</a>
+    </section>
+  </main>
 </body>
 </html>
