--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ANI-CULT | Demon Slayer Merch</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ANI-CULT DROP 001</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="bg-home">
+  <div class="overlay"></div>
   <header>
-    <h1>ANI-CULT</h1>
-    <p>Demon Slayer Infinity Castle Merch</p>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="order.html">Order</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <h1>ANI‑CULT</h1>
+    <p>DROP 001 — Demon Slayer Infinity Castle</p>
+    <nav><a href="index.html">Home</a><a href="order.html">Order</a><a href="about.html">About</a><a href="contact.html">Contact</a></nav>
   </header>
   <main>
-    <section class="hero">
-      <h2>Most walk in as fans... You walk in as a demon.</h2>
-      <a href="order.html" class="button">Order Now</a>
-    </section>
+    <h2 class="hero-title">Step Into the Castle.</h2>
+    <a href="order.html" class="button">Order Now</a>
   </main>
 </body>
 </html>
