--- a/confirm.html
+++ b/confirm.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Order Confirmed</title>
-  <link rel="stylesheet" href="css/styles.css"/>
-</head>
-<body class="bg-confirm">
+<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Confirmed | ANI-CULT</title><link rel="stylesheet" href="css/styles.css"></head>
+<body class="bg-confirm"><div class="overlay"></div>
   <div class="confirmation-panel">
-    <img src="assets/manga-akaza.png" alt="Akaza Manga Panel" />
+    <img src="assets/akaza-confirm.png" alt="Akaza Panel">
     <p class="speech-bubble">「Order confirmed. Your fate is sealed.」 – Akaza</p>
     <a href="index.html" class="button">Return Home</a>
   </div>
