--- a/order.html
+++ b/order.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Place Your Order</title>
-  <link rel="stylesheet" href="css/styles.css"/>
-</head>
-<body class="bg-order">
-  <h1>Order Form</h1>
-  <form action="https://formspree.io/f/yourformid" method="POST">
-    <input type="text" name="name" placeholder="Full Name" required />
-    <input type="email" name="email" placeholder="Email" required />
-    <input type="text" name="phone" placeholder="Phone Number" required />
-    <input type="text" name="address" placeholder="Shipping Address" required />
-    <select name="size" required>
-      <option value="">Select Size</option>
-      <option>Small</option>
-      <option>Medium</option>
-      <option>Large</option>
-    </select>
-    <input type="number" name="quantity" placeholder="Quantity" required />
-    <button type="submit">Place Order</button>
-  </form>
+<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Order | ANI-CULT</title><link rel="stylesheet" href="css/styles.css"></head>
+<body class="bg-order"><div class="overlay"></div>
+  <header><h1>Place Your Order</h1></header>
+  <main>
+    <form id="orderForm">
+      <input name="name" placeholder="Name" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <input name="phone" placeholder="Phone" required>
+      <input name="address" placeholder="Shipping Address" required>
+      <select name="size" required><option value="">Select Size</option><option>Small</option><option>Medium</option><option>Large</option></select>
+      <input type="number" name="quantity" placeholder="Quantity" required>
+      <button type="submit" class="button">Confirm Order</button>
+    </form>
+  </main>
+  <script>
+    document.getElementById('orderForm').addEventListener('submit', e => {
+      e.preventDefault();
+      // you can integrate backend here; for demo, redirect:
+      window.location.href = 'confirm.html';
+    });
+  </script>
 </body>
 </html>
